--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,6 +1,4 @@
-*,
-*:after,
-*:before {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,7 +6,7 @@
 }
 
 body {
-    font-size: 100%;
+  font-family: "Kumbh Sans", sans-serif;
 }
 
 ul, li {
