--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,14 +1,15 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
 body {
   font-family: "Kumbh Sans", sans-serif;
 }
 
-ul, li {
+ul,
+li {
   list-style-type: none;
 }
