--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,7 +42,7 @@ main {
   color: var(--text-color);
 }
 
-.card .info-profile .country {
+.card .info-profile .city {
   color: var(--text-color);
   font-weight: 400;
   margin: 20px 0 40px 0;
